--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-07-27    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in rgyr that did not write out correct bin coords when
+	hist_min != 0
+
 2011-07-26    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in rdf tool where command-line options were not
