Changed rmsds so non-verbose mode does not provide progress updates
svn path=/software/LOOS/trunk/; revision=6637

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Fixed bug in rgyr that did not write out correct bin coords when
 	hist_min != 0
+	* Changed rmsds so non-verbose mode does not give progress updates
 
 2011-07-26    <tromo@spade.biophysics.rochester.edu>
 
