--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-07-28    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in xy_rdf that caused the by-molecule split-mode to
+	not work correctly if the selection "pruned" any bonds.
+
 2011-07-27    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in rgyr that did not write out correct bin coords when
