--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 	* Fixed bug in center-molecule where the --center and --center_xy
 	options could not be used (this appears to relate to certain
 	versions of BOOST Options).
+	* Fixed bug in density-dist-windowed and rgyr that caused the
+	first frame of the trajectory to be skipped if no explicit skip
+	was specified.
 
 2011-07-27    <tromo@spade.biophysics.rochester.edu>
 
