Bug fix: matrix was transposed (and possible crashed tool)
svn path=/software/LOOS/trunk/; revision=6704

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-03    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in gridslice that transposed output matrix (or crashed
+	the tool)
+
 2011-08-02    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in blobid that incorrectly parsed the command-line
