--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-04    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in effsize.pl that used incorrect options to trajinfo
+	to determine trajectory size.
+
 2011-08-03    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in gridslice that transposed output matrix (or crashed
