--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-22    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed const-ness of AtomicGroup::findById() and
+	AtomicGroup::groupFromID() 
+
 2011-08-04    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in effsize.pl that used incorrect options to trajinfo
