--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-25    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in order_params where NOT specifying the ba_last
+	caused it to be improperly set.
+
 2011-08-22    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed const-ness of AtomicGroup::findById() and
