--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-14    <tromo@spade.biophysics.rochester.edu>
+
+	* Added check in rdf-based tools to ensure either the model or the
+	trajectory has periodic box information.
+
 2011-09-08 <alan> 
     * Added new option to merge-trj (selection-is-split) to handle the case 
 	where the centering selection is split across an image boundary more 
