--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-15    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in density-dist where the default window was not 0,
+	causing the time-series to always be written.
+
 2011-09-14    <tromo@spade.biophysics.rochester.edu>
 
 	* Added check in rdf-based tools to ensure either the model or the
