--- a/README
+++ b/README
@@ -23,3 +23,4 @@ This is a developmental version of LOOS with python bindings via swig.
 It has only been tested using Fedora 14.
 
                                                   
+To use, PYTHONPATH and LD_LIBRARY_PATH must point to this directory.
