--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-11-30    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in XTC::updateGroupCoords() when passed a group
+	smaller than the trajectory frame (thanks to Ben Reynwar for
+	catching this one!)
+
 2011-11-22  Tod Romo  <tromo@gorgoneion>
 
 	* Fixed bug in PDB reading code affected DOS formatted PDB files
