--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 	* Changed header file CPP guards to have "LOOS_" as a prefix
 	(e.g. LOOS_ATOM_HPP rather than ATOM_HPP) to prevent potential
 	collisions with user code.
+	* Changed pdb reader to significantly speed up reading large PDBs
+	with CONECT records.
 
 2011-11-10    <tromo@spade.biophysics.rochester.edu>
 
