Bug in decorr_time found...  The trange was ignored (there was a mix of old and NWO options processing).  This caused it to not generate any output.
svn path=/software/LOOS/trunk/; revision=7253

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-12-07    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in decorr_time where the time-range wasn't properly
+	handled and it would not generate output
+
 2011-11-30    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in XTC::updateGroupCoords() when passed a group
