Bug report from Ben Reynwar (yes, only hours after 1.7.3 went live...Oh how I LOVE Mondays...)  AtomicGroup::maxResid() didn't actually find the max resid in the AtomicGroup.
svn path=/software/LOOS/trunk/; revision=7286

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-12-12    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in AtomicGroup::maxResid() that gave erroneous results
+	(found by Ben Reynwar).
+
 2011-12-09    <tromo@spade.biophysics.rochester.edu>
 
 	* Added residue-contact-map tool which generates a "heat map" of
