AtomicGroup::splitByResidue() did NOT copy the box info into the split residues...fixed...
svn path=/software/LOOS/trunk/; revision=7325

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-12-19    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed AtomicGroup::splitByResidue() to preserve the periodic box
+	information in the split residues
+
 2011-12-15    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed AtomicGroup::splitByMolecule() to be const.  A copy of
