Previously on LOOS, subsetter would prune any connectivity if the user requested a subset.  Now, it will map the bound atomids into the new subset atomids and write out the pruned connectivity.
svn path=/software/LOOS/trunk/; revision=7337

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-12-20    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed subsetter so that connectivity is preserved when
+	extracting a subset
+
 2011-12-19    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed AtomicGroup::splitByResidue() to preserve the periodic box
